syntax = "proto3";

package api;
option go_package="./api";

message TwoIntInputRequest{
    int32 first = 1;
    int32 second = 2;
}
message OneIntOutputResponse{
    int32 result = 1;
}
message OneFloatOutputResponse{
    float result = 1;
}

service CalculatorService{
    rpc Sum(TwoIntInputRequest) returns (OneIntOutputResponse){};
    rpc Difference(TwoIntInputRequest) returns (OneIntOutputResponse){};
    rpc Multiply(TwoIntInputRequest) returns (OneIntOutputResponse){};
    rpc Divide(TwoIntInputRequest) returns (OneFloatOutputResponse){};

}